# AdventOfCode

./: .env.example  README.md  main.py  playground.ipynb  pyproject.toml
templates/day_template/: main.py
templates/day_template/tests/: test_all.py
utils/: advent.py  class_helper.py  day.py  equation.py  file.py  grid2D.py  range.py
utils/test_utils/: test_range.py
year2022/day01/: main.py
year2022/day01/tests/: test01.txt  test02.txt  test_all.py
year2022/day02/: main.py
year2022/day02/tests/: test_all.py
year2023/day02/: main.py
year2023/day02/tests/: test_all.py
year2023/day03/: main.py
year2023/day03/tests/: test_all.py
year2023/day04/: main.py
year2023/day04/tests/: test_all.py
year2023/day05/: main.py
year2023/day05/tests/: test_all.py
year2023/day06/: main.py
year2023/day06/tests/: test_all.py
year2023/day07/: main.py
year2023/day07/tests/: test_all.py
year2023/day08/: main.py
year2023/day08/tests/: test_all.py
year2023/day09/: main.py
year2023/day10/: main.py
year2023/day11/: main.py
year2023/day12/: main.py
year2023/day13/: main.py
year2023/day14/: main.py
year2023/day15/: main.py
year2023/day16/: main.py
year2023/day17/: main.py
year2023/day18/: main.py
year2023/day19/: main.py
year2024/day01/: main.py
year2024/day02/: main.py
year2024/day03/: main.py
year2024/day04/: main.py
year2024/day05/: main.py
year2024/day06/: main.py
year2024/day07/: main.py
year2024/day08/: main.py
year2024/day09/: main.py
year2024/day10/: main.py
year2024/day11/: main.py
(+22 files in other folders)
