[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Natalphée", email = "soulat.nathanael@gmail.com"},
]
dependencies = [
    "ipykernel>=6.27.1",
    "notebook>=7.0.6",
    "click>=8.1.7",
    "pytest>=7.4.3",
    "requests>=2.31.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

